--- a/.lang/pt_BR.po
+++ b/.lang/pt_BR.po
@@ -2,66 +2,80 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: mitranslate 3.18.0\n"
-"POT-Creation-Date: 2024-08-26 15:50 UTC\n"
-"PO-Revision-Date: 2024-08-26 15:48 UTC\n"
-"Last-Translator: Murilo Gomes Julio <contatomestredainfo@gmail.com>\n"
+"PO-Revision-Date: 2025-01-01 17:07 UTC\n"
+"Last-Translator: Mestre da Info <contatomestredainfo@gmail.com>\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-# gb-ignore
-#: .project:1 FMain.form:22
-msgid "MITranslate"
-msgstr ""
+#: FMain.class:14
+msgid "<b>gawk</b> not found."
+msgstr "<b>gawk</b> não encontrado."
 
-# gb-ignore
-#: .project:2
-msgid ""
-"It is software for translating texts, listening to words and phrases and getting the meaning of words through the translate-shell.\n"
-"The MITranslate is under license GPL-2.0-only"
-msgstr ""
+#: FMain.class:19
+msgid "<b>translate-shell</b> not found."
+msgstr "<b>translate-shell</b> não encontrado."
 
-#: FAbout.form:17 FMain.form:37
-msgid "About MITranslate"
-msgstr "Sobre MITranslate"
-
-#: FAbout.form:45
-msgid "Desenvolvido por: Murilo Gomes Julio"
-msgstr "Desenvolvido por: Murilo Gomes Julio"
-
-#: FAbout.form:65
-msgid "Licença: GPL-2.0-only"
-msgstr "Licença: GPL-2.0-only"
-
-#: FMain.class:75
-msgid "The text is too long, the audio could not be played!"
-msgstr "O texto é muito longo, não foi possível reproduzir o áudio!"
-
-#: FMain.form:27
+#: FMain.form:29
 msgid "About"
 msgstr "Sobre"
 
-#: FMain.form:30
-msgid "Support MITranslate"
-msgstr "Apoie MITranslate"
+#: FAbout.form:18 FMain.form:46
+msgid "About MITranslate"
+msgstr "Sobre MITranslate"
 
-#: FMain.form:49
-msgid "Translate"
-msgstr "Traduzir"
+#: FMain.form:32
+msgid "Check Update"
+msgstr "Verificar Atualização"
 
-#: FMain.form:68
+#: FAbout.form:46
+msgid "Desenvolvido por: Murilo Gomes Julio"
+msgstr "Desenvolvido por: Murilo Gomes Julio"
+
+#: FMain.form:104
+msgid "Dictionary"
+msgstr "Dicionário"
+
+# gb-ignore
+#: .project:2
+msgid "It is software for translating texts, listening to words and phrases and getting the meaning of words through the translate-shell.\nThe MITranslate is under license GPL-2.0-only"
+msgstr ""
+
+#: FMain.form:77
 msgid "Language:"
 msgstr "Idioma:"
 
-#: FMain.form:80
-msgid "Translate to"
-msgstr "Traduzir para"
+#: FAbout.form:66
+msgid "Licença: GPL-2.0-only"
+msgstr "Licença: GPL-2.0-only"
 
-#: FMain.form:85
+# gb-ignore
+#: .project:1 FMain.form:24
+msgid "MITranslate"
+msgstr ""
+
+#: FMain.form:94
 msgid "Play"
 msgstr "Reproduzir"
 
-#: FMain.form:95
-msgid "Dictionary"
-msgstr "Dicionário"
+#: FMain.form:39
+msgid "Support MITranslate"
+msgstr "Apoie MITranslate"
+
+#: FMain.class:85
+msgid "The text is too long, the audio could not be played!"
+msgstr "O texto é muito longo, não foi possível reproduzir o áudio!"
+
+#: FMain.form:58
+msgid "Translate"
+msgstr "Traduzir"
+
+#: FMain.form:89
+msgid "Translate to"
+msgstr "Traduzir para"
+
+#: FAbout.class:19
+msgid "Version:"
+msgstr "Versão:"
+
