--- a/.lang/pt_BR.po
+++ b/.lang/pt_BR.po
@@ -1,75 +1,66 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: mitranslate 3.20.0\n"
-"POT-Creation-Date: 2025-01-19 20:55 UTC\n"
-"PO-Revision-Date: 2025-01-19 20:55 UTC\n"
+"Project-Id-Version: mitranslate 3.20.1\n"
+"PO-Revision-Date: 2025-02-23 13:27 UTC\n"
 "Last-Translator: Murilo Gomes Julio <contatomestredainfo@gmail.com>\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-# gb-ignore
-#: .project:1 FMain.form:24
-msgid "MITranslate"
-msgstr ""
+#: FMain.form:28
+msgid "About"
+msgstr "Sobre"
+
+#: FAbout.form:20 FMain.form:45
+msgid "About MITranslate"
+msgstr "Sobre MITranslate"
+
+#: FMain.form:31
+msgid "Check Update"
+msgstr "Verificar Atualização"
+
+#: FMain.form:98
+msgid "Dictionary"
+msgstr "Dicionário"
 
 # gb-ignore
 #: .project:2
-msgid ""
-"It is software for translating texts, listening to words and phrases and getting the meaning of words through the translate-shell.\n"
-"The MITranslate is under license GPL-2.0-only"
+msgid "It is software for translating texts, listening to words and phrases and getting the meaning of words through the translate-shell.\nThe MITranslate is under license GPL-2.0-only"
 msgstr ""
+
+#: FMain.form:76
+msgid "Language:"
+msgstr "Idioma:"
+
+# gb-ignore
+#: .project:1 FAbout.form:29 FMain.form:23
+msgid "MITranslate"
+msgstr ""
+
+#: FMain.form:38
+msgid "Technical Support"
+msgstr "Suporte Técnico"
+
+#: FAbout.form:82
+msgid "Third Party Software Credits"
+msgstr "Créditos de Software de Terceiros"
+
+#: FMain.form:57
+msgid "Translate"
+msgstr "Traduzir"
+
+# gb-ignore
+#: FAbout.form:89
+msgid "translate-shell"
+msgstr ""
+
+#: FMain.form:88
+msgid "Translate to"
+msgstr "Traduzir para"
 
 #: FAbout.class:17
 msgid "Version:"
 msgstr "Versão:"
 
-#: FAbout.form:18 FMain.form:46
-msgid "About MITranslate"
-msgstr "Sobre MITranslate"
-
-#: FMain.class:14
-msgid "<b>gawk</b> not found."
-msgstr "<b>gawk</b> não encontrado."
-
-#: FMain.class:19
-msgid "<b>translate-shell</b> not found."
-msgstr "<b>translate-shell</b> não encontrado."
-
-#: FMain.class:85
-msgid "The audio could not be played, the text may be too long or the selected language does not yet have audio."
-msgstr "O áudio não pôde ser reproduzido, o texto pode ser muito longo ou o idioma selecionado ainda não possui áudio."
-
-#: FMain.form:29
-msgid "About"
-msgstr "Sobre"
-
-#: FMain.form:32
-msgid "Check Update"
-msgstr "Verificar Atualização"
-
-#: FMain.form:39
-msgid "Support MITranslate"
-msgstr "Apoie MITranslate"
-
-#: FMain.form:58
-msgid "Translate"
-msgstr "Traduzir"
-
-#: FMain.form:77
-msgid "Language:"
-msgstr "Idioma:"
-
-#: FMain.form:89
-msgid "Translate to"
-msgstr "Traduzir para"
-
-#: FMain.form:94
-msgid "Play"
-msgstr "Reproduzir"
-
-#: FMain.form:104
-msgid "Dictionary"
-msgstr "Dicionário"
