--- a/.hidden/CHANGELOG
+++ b/.hidden/CHANGELOG
@@ -1,3 +1,6 @@
+* Tue Jul 15 2025 Murilo Gomes Julio <suporte@mugomes.com.br> 2.0.2
+- Corrigido a versão
+
 * Tue Jul 15 2025 Murilo Gomes Julio <suporte@mugomes.com.br> 1.0.4
 - Atualizado as informações do app
 - Atualizado as traduções
